@@ -132,7 +132,7 @@ You can also use the <tt>accept_invitation</tt> instance method as follow:
 
 Since the invitations controller take care of all the invite/accept invitation process, in most cases you wouldn't call the <tt>invite</tt> and <tt>accept_invitation</tt> methods directly.
 Instead, in your views, put a link to <tt>new_user_invitation_path</tt> or <tt>new_invitation_path(:user)</tt> or even <tt>/users/invitation/new</tt> to prepare and send an invitation.
-This email includes a link to accept the invitation like <tt>/users/invitation/accept?invitation_token=abcd123</tt>.
+This email includes a link to accept the invitation like <tt>/users/invitation/accept/:invitation_token</tt>.
 
 Note that if the invitation_token is not present or not valid, the visitor is redirected to after_sign_out_path_for(resource_name).
 You can also overwrite after_update_path_for and after_sign_out_path_for to customize your redirect hooks. More on Devise's README, "Controller filters and helpers" section.
