@@ -7,7 +7,7 @@ module ActionDispatch
       def devise_invitation(mapping, controllers)
         resource :invitation, :only => [:new, :create, :update],
           :path => mapping.path_names[:invitation], :controller => controllers[:invitations] do
-          get :edit, :path => mapping.path_names[:accept], :as => :accept
+          get :edit, :path => "#{mapping.path_names[:accept]}(/:invitation_token)", :as => :accept
         end
       end
       
